--- a/style.css
+++ b/style.css
@@ -28,7 +28,13 @@ body {
   justify-content: center;
   align-items: center;
   position: relative;
+  transition: width 0.6s;
+  transition-timing-function: ease-in-out;
 }
+.faded-out {
+  width: 0px;
+}
+
 .cellText {
   width: 40px;
   height: 40px;
@@ -47,6 +53,7 @@ body {
   position: absolute;
   left: -10px;
   opacity: 0%;
+  cursor: pointer;
 }
 .hidden:hover {
   opacity: 20%;
