--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   background-color: #64748b;
   flex-direction: column;
   gap: 100px;
+  position: relative;
 }
 
 .container {
@@ -35,6 +36,26 @@ body {
 }
 .dragging {
   opacity: 0.4;
+}
+.drop-area {
+  height: 30vh;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  right: 10px;
+  left: 10px;
+  background-color: none;
+  border-radius: 20px;
+  opacity: 0;
+  transition: opacity 0.6s;
+}
+.drop-visible {
+  background-color: white;
+  opacity: 0.3;
+}
+.cannot-drop {
+  background-color: red;
+  opacity: 0.3;
 }
 
 .cellText {
